--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Result</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 1, 2021 08:06:21 PM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 2, 2021 10:03:40 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">feature</p>
             <p class="text-sm">
-              <span>20:06:21 PM</span> / <span>00:00:41:849</span>
+              <span>10:03:40 AM</span> / <span>00:00:30:364</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">feature</h5>
-<span class='badge badge-success'>03.01.2021 20:06:21</span>
-<span class='badge badge-danger'>03.01.2021 20:07:03</span>
-<span class='badge badge-default'>00:00:41:849</span>
+<span class='badge badge-success'>03.02.2021 10:03:40</span>
+<span class='badge badge-danger'>03.02.2021 10:04:11</span>
+<span class='badge badge-default'>00:00:30:364</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 </div>
@@ -102,7 +102,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:07:03 PM</td>
+        <td>10:04:11 AM</td>
         <td>
           Test Passed
         </td>
@@ -126,13 +126,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 1, 2021 08:06:21 PM</h3>
+<h3>Mar 2, 2021 10:03:40 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 1, 2021 08:07:03 PM</h3>
+<h3>Mar 2, 2021 10:04:11 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -202,7 +202,7 @@
 </div></div>
 <script>
 var timeline = {
-"feature":41.849
+"feature":30.364
 };
 </script>
 <div class="row">
